fix letter-spacing and meeting item border

--- a/frontend/src/components/MeetingListView/MeetingListItem.scss
+++ b/frontend/src/components/MeetingListView/MeetingListItem.scss
@@ -109,8 +109,8 @@
   &:hover {
     border: 2px solid $lightBlue;
   }
-}
 
-.in-progress {
-  border: 2px solid $cityBronze;
+  &.in-progress {
+    border: 2px solid $cityBronze;
+  }
 }
